examples/test/testpolicy3297.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3297
  namespace: namespace252
spec:
  podSelector:
    matchLabels:
      key22: value33
      key28: value39
      key0: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value12
          key8: value0
          key19: value4
      podSelector:
        matchLabels:
          key38: value31
